--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
     .char-card{background:rgba(255,255,255,.08);border-radius:20px;padding:20px;cursor:pointer;transition:.4s;border:2px solid transparent;position:relative}
     .char-card:hover{transform:translateY(-10px) scale(1.03);border-color:var(--glow)}
     .char-card.selected{border:4px solid var(--glow)}
-    .char-avatar{width:100px;height:100px;border-radius:50%;margin:0 auto 14px;background:center/cover;border:5px solid var(--glow)}
+    .char-avatar{width:100px;height:100px;border-radius:50%;margin:0 auto 14px;object-fit:cover;border:5px solid var(--glow)}
     .char-name{font-weight:bold;font-size:19px;color:#fff;margin:10px 0 6px}
     .char-tag{font-size:13px;padding:5px 14px;border-radius:25px;display:inline-block;font-weight:bold;color:#fff}
 
     #game-screen{display:none;padding:28px;position:relative}
     .back-btn{position:absolute;top:18px;left:18px;background:rgba(255,255,255,.15);border:none;border-radius:50%;width:48px;height:48px;font-size:24px;color:#fff;cursor:pointer}
     .ai-info{display:flex;align-items:center;justify-content:center;gap:18px;margin-bottom:22px}
-    .ai-avatar-large{width:90px;height:90px;border-radius:50%;background:center/cover;border:5px solid var(--glow)}
+    .ai-avatar-large{width:90px;height:90px;border-radius:50%;object-fit:cover;border:5px solid var(--glow)}
     .ai-name{font-size:26px;font-weight:bold;color:var(--glow)}
     button.choice{padding:20px 36px;margin:12px;font-size:21px;background:linear-gradient(45deg,#d63384,#ff6b9d);color:#fff;border:none;border-radius:50px;min-width:130px}
     .stats{display:flex;justify-content:space-around;margin:25px 0;font-size:18px}
@@ -53,22 +53,22 @@
   <!-- CHARACTER SELECT -->
   <div id="character-select">
     <div class="char-card" data-id="lana">
-      <div class="char-avatar" style="background-image:url('https://i.imgur.com/8pL3vXJ.png')"></div>
+      <img class="char-avatar" src="https://i.imgur.com/8pL3vXJ.png" alt="Lana">
       <div class="char-name">Lana</div>
       <div class="char-tag" style="background:#ff6b9d;">Flirty Tease</div>
     </div>
     <div class="char-card" data-id="sophia">
-      <div class="char-avatar" style="background-image:url('https://i.imgur.com/QzR5mP2.png')"></div>
+      <img class="char-avatar" src="https://i.imgur.com/QzR5mP2.png" alt="Sophia">
       <div class="char-name">Sophia</div>
       <div class="char-tag" style="background:#9c27b0;">Dominant Queen</div>
     </div>
     <div class="char-card" data-id="emma">
-      <div class="char-avatar" style="background-image:url('https://i.imgur.com/7kL9vF3.png')"></div>
+      <img class="char-avatar" src="https://i.imgur.com/7kL9vF3.png" alt="Emma">
       <div class="char-name">Emma</div>
       <div class="char-tag" style="background:#ff9800;">Shy Cutie</div>
     </div>
     <div class="char-card" data-id="mia">
-      <div class="char-avatar" style="background-image:url('https://i.imgur.com/XmN2pR8.png')"></div>
+      <img class="char-avatar" src="https://i.imgur.com/XmN2pR8.png" alt="Mia">
       <div class="char-name">Mia</div>
       <div class="char-tag" style="background:#e91e63;">Bratty Firecracker</div>
     </div>
@@ -78,7 +78,7 @@
   <div id="game-screen" class="hidden">
     <button class="back-btn" id="back-btn">Back</button>
     <div class="ai-info">
-      <div class="ai-avatar-large" id="ai-avatar"></div>
+      <img class="ai-avatar-large" id="ai-avatar" src="" alt="AI">
       <div class="ai-name" id="ai-name"></div>
     </div>
 
@@ -152,10 +152,7 @@
     }
 
     function startGame(key) {
-      if (!characters[key]) {
-        console.error("Character not found:", key);
-        return;
-      }
+      if (!characters[key]) return;
       currentChar = characters[key];
       aiClothes = [...currentChar.clothes];
 
@@ -164,7 +161,7 @@
 
       aiName.textContent = currentChar.name;
       aiDisplayName.textContent = currentChar.name;
-      aiAvatar.style.backgroundImage = `url('${currentChar.avatar}')`;
+      aiAvatar.src = currentChar.avatar; // FIXED: Use .src
 
       restartGame();
     }
